{{$NEXT}}

- More path tweaks for tests to try to make Windows and OSX happy.


0.03     2016-10-04

- Updated paths used in tests to try to make Windows happy.


0.02     2016-10-02

- Fix code for Perl 5.8.8

- Require Path::Tiny 0.087+ to ensure that tests pass.


0.01     2016-10-02

- First release upon an unsuspecting world.